--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@
     </footer>
 
     <script>
+        console.error("# This is an error to break loadStop event.");
+
         // Automatic Slideshow - change image every 4 seconds
         var myIndex = 0;
         carousel();
