--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i
                     class="fa fa-bars"></i></a>
             <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-            <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">BAND</a>
+            <a href="abc.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">BAND</a>
             <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TOUR</a>
             <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
             <div class="w3-dropdown-hover w3-hide-small">
@@ -228,7 +228,6 @@
     </footer>
 
     <script>
-        console.error("# This is an error to break loadStop event.");
 
         // Automatic Slideshow - change image every 4 seconds
         var myIndex = 0;
