--- a/abc.html
+++ b/abc.html
@@ -222,6 +222,7 @@
         // Automatic Slideshow - change image every 4 seconds
         var myIndex = 0;
         carousel();
+        console.log(achievers);
 
         function carousel() {
             var i;
