--- a/abc.html
+++ b/abc.html
@@ -221,7 +221,7 @@
 
         // Automatic Slideshow - change image every 4 seconds
         var myIndex = 0;
-        carousel();
+        carouse();
         console.log(achievers);
 
         function carousel() {
@@ -238,7 +238,7 @@
 
         // Used to toggle the menu on small screens when clicking on the menu button
         function myFunction() {
-            var x = document.getElementById("navDemo");
+            var x = document.getElementByI("navDemo");
             if (x.className.indexOf("w3-show") == -1) {
                 x.className += " w3-show";
             } else {
@@ -248,7 +248,7 @@
 
         // When the user clicks anywhere outside of the modal, close it
         var modal = document.getElementById('ticketModal');
-        window.onclick = function (event) {
+        window.onclic = function (event) {
             if (event.target == modal) {
                 modal.style.display = "none";
             }
